--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,9 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "rss-parser": "^3.12.0",
+    "telegraf": "^4.4.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
